cambio de  mayuscula a minuscul

--- a/clientes.html
+++ b/clientes.html
@@ -10,7 +10,7 @@
 </head>
 <body class='fondos'>
 	<section class="partesuperior">
-		<HEADER><H1>CLIENTES</H1></HEADER>
+		<header><h1>CLIENTES</h1></header>
 		<nav class="enlace navbar navbar-expand-md navbar-dark">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -42,54 +42,54 @@
 		</div>
 			</nav>
 
-	<BR>
-		<H3 class='dato'>DEJANOS TUS DATOS:</H3>
-		<BR></BR>
+	<br>
+		<h3 class='dato'>DEJANOS TUS DATOS:</h3>
+		<br></br>
 		
-	<FORM class='encuesta' ACTION='' METHOD='POST'>
-		<DIV>
-			<LABEL FOR='NOMBRE'>NOMBRE:</LABEL>
-			<INPUT ID='NOMBRE' NAME='NOMBRE' TYPE='TEXT'></INPUT>
-		</DIV>
-		<DIV>
-			<LABEL FOR='APELLIDO'>APELLIDO:</LABEL>
-			<INPUT ID='APELLIDO' NAME='APELLIDO' TYPE='TEXT'></INPUT>
-		</DIV>
-		<DIV>
-			<LABEL FOR='EMAIL'>EMAIL:</LABEL>
-			<INPUT ID='EMAIL' TYPE='EMAIL'NAME='EMAIL'REQUIRED PLACEHOLDER='ejemplo@gmail.com'></INPUT>
-		</DIV>
-		<DIV>
-			<LABEL FOR='ESTADO CIVIL'>COMO NOS ENCONTRASTE:</LABEL>
-			<SELECT NAME='ESTADO CIVIL' ID='ESTADO CIVIL'>
-				<OPTION VALUE='1'>INSTAGRAM</OPTION>
-				<OPTION VALUE='2'>FACEBOOK</OPTION>
-				<OPTION VALUE='2'>OTRO</OPTION>
-			</SELECT>
-		</DIV>
-		
-		<DIV>
-			<LABEL FOR='DESEA RECIBIR MAILS CON INFORMACION?'>DESEA RECIBIR INFORMACION DE LA MARCA?</LABEL>
-			<INPUT ID='DESEA RECIBIR MAILS CON INFORMACION?' NAME='DESEA RECIBIR LOS NEWSLETTER?' TYPE='CHECKBOX'></INPUT>
-		</DIV>
+	<form class='encuesta' ACTION='' METHOD='POST'>
+		<div>
+			<label FOR='NOMBRE'>NOMBRE:</label>
+			<input ID='NOMBRE' NAME='NOMBRE' TYPE='TEXT'></input>
+		</div>
+		<div>
+			<label FOR='APELLIDO'>APELLIDO:</label>
+			<input ID='APELLIDO' NAME='APELLIDO' TYPE='TEXT'></input>
+		</div>
+		<div>
+			<label FOR='EMAIL'>EMAIL:</label>
+			<input ID='EMAIL' TYPE='EMAIL'NAME='EMAIL'REQUIRED PLACEHOLDER='ejemplo@gmail.com'></input>
+		</div>
+		<div>
+			<label FOR='ESTADO CIVIL'>COMO NOS ENCONTRASTE:</label>
+			<select NAME='ESTADO CIVIL' ID='ESTADO CIVIL'>
+				<option VALUE='1'>INSTAGRAM</option>
+				<option VALUE='2'>FACEBOOK</option>
+				<option VALUE='2'>OTRO</option>
+			</select>
+		</div>
 		
 		<div>
-			<LABEL FOR='OBSERVACIONES'>DEJANOS TU OPINION</LABEL>
-			<TEXTAREA NAME='DEJANOS TU OPINION' ID='OBSERVACIONES'COLS='30' ROWS='2' PLACEHOLDER='COMENTARIOS'></TEXTAREA>
+			<label FOR='DESEA RECIBIR MAILS CON INFORMACION?'>DESEA RECIBIR INFORMACION DE LA MARCA?</label>
+			<input ID='DESEA RECIBIR MAILS CON INFORMACION?' NAME='DESEA RECIBIR LOS NEWSLETTER?' TYPE='CHECKBOX'></input>
+		</div>
+		
+		<div>
+			<label FOR='OBSERVACIONES'>DEJANOS TU OPINION</label>
+			<textarea NAME='DEJANOS TU OPINION' ID='OBSERVACIONES'COLS='30' ROWS='2' PLACEHOLDER='COMENTARIOS'></textarea>
 		</div>
 		<br>
-		<DIV>
-			<BUTTON TYPE='RESET' VALUE='LIMPIAR FORMULARIO'>LIMPIAR FORMULARIO</BUTTON>
+		<div>
+			<button TYPE='RESET' VALUE='LIMPIAR FORMULARIO'>LIMPIAR FORMULARIO</button>
 
-			<BUTTON TYPE='SUBMIT' VALUE='ENVIAR FORMULARIO'>ENVIAR!</BUTTON>
-		</DIV>
-		<DIV>
+			<button TYPE='SUBMIT' VALUE='ENVIAR FORMULARIO'>ENVIAR!</button>
+		</div>
+		<div>
 		
-		</DIV>
-	</FORM>
+		</div>
+	</form>
 </section>
 	<footer class="cascada-gris"> 
-		<h4><INS><EM>Sobre nosotros:</EM></h4></INS>
+		<h4><ins><em>Sobre nosotros:</em></ins></h4>
 		<div class="name">
 				<h5>Nombre:</h5>
 				<p>Nombre de la marca</p>
