--- a/pantalones.html
+++ b/pantalones.html
@@ -102,7 +102,7 @@
 </section>
 
 	<footer class="cascada-gris"> 
-		<h4><INS><EM>Sobre nosotros:</EM></h4></INS>
+		<h4><ins><em>Sobre nosotros:</em></ins></h4>
 			<div class="name">
 				<h5>Nombre:</h5>
 				<p>Nombre de la marca</p>
