--- a/remeras.html
+++ b/remeras.html
@@ -10,7 +10,7 @@
 </head>
 <body class='fondos'> 
 	<section class="partesuperior">
-		<HEADER><H1>REMERAS</H1></HEADER>
+		<header><H1>REMERAS</H1></header>
 		<nav class="enlace navbar navbar-expand-md navbar-dark">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -41,52 +41,54 @@
 			</form>
 		</div>
 			</nav>
-<BR></BR>
+<br></br>
 	<main class='juntos'>
 		<section>
-			<TABLE BORDER class='tabla'>
-			<THEAD>
-				<TR>
-					<TH>REMERA</TH>
-					<TH>TALLE</TH>
-					<TH>PRECIO</TH>
-					<TH>DECUENTOS</TH>
+			<table BORDER class='tabla'>
+			<thead>
+				<tr>
+					<th>REMERA</th>
+					<th>TALLE</th>
+					<th>PRECIO</th>
+					<th>DECUENTOS</th>
 				</TR>
-			</THEAD>
+			</thead>
 
-			<TBODY>
-				<TR>
-					<TD>BLUE</TD>
-					<TD>LARGE</TD>
-					<TD>$550</TD>
-					<TD>
-						<OL>
-							<LI>CON VISA</LI>
-							<LI>CON MASTERCARD</LI>
-						</OL>
-					</TD>
-				</TR>
-				<TR>
-				    <TD>ORANGE</TD>
-					<TD>SMALL</TD>
-					<TD>$500</TD>
-					<TD>NADA</TD>
-				</TR>
-				<TR>
-					<TD>RED</TD>
-					<TD>MEDIUM</TD>
-					<TD>$450</TD>
-					<TD>
-						<OL>
-							<LI>EN EFECTIVO</LI>
-							<LI>DEPOSITO</LI>
-						</OL>
-					</TD>
-				</TR>
+			<tbody>
+				<tr>
+					<td>BLUE</td>
+					<td>LARGE</td>
+					<td>$550</td>
+
+					<td>
+						<ol>
+							<li>CON VISA</li>
+							<li>CON MASTERCARD</li>
+						</ol>
+					</td>
+				</tr>
+				<tr>
+				    <td>ORANGE</td>
+					<td>SMALL</td>
+					<td>$500</td>
+					<td>NADA</td>
+				</tr>
+				<tr>
+					<td>RED</td>
+					<td>MEDIUM</td>
+					<td>$450</td>
+
+					<td>
+						<ol>
+							<li>EN EFECTIVO</li>
+							<li>DEPOSITO</li>
+						</ol>
+					</td>
+				</tr>
 				
-			</TBODY>
+			</tbody>
 			
-		</TABLE>
+		</table>
 		</section>
 	
 	<main class="imagen">
@@ -109,7 +111,7 @@
 		
 	</section>
 			<footer class="cascada-gris"> 
-				<h4><INS><EM>Sobre nosotros:</EM></h4></INS>
+				<h4><ins><em>Sobre nosotros:</em></ins></h4>
 					<div class="name">
 						<h5>Nombre:</h5>
 						<p>Nombre de la marca</p>
