--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="fondos"></body>
 	<section class="partesuperior">
-	<HEADER class='titulo'><h1>NOMBRE DE LA MARCA</h1></HEADER>
+	<header class='titulo'><h1>NOMBRE DE LA MARCA</h1></header>
 		<nav class="enlace navbar navbar-expand-md navbar-dark">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -49,10 +49,10 @@
 		<br>
 
 		<section>
-			<P class='lead'>SOMOS UNA MARCA DE ROPA NUEVA QUE TIENE LA ULTIMA MODA DE LOS ULTIMOS AÑOS. Lorem ipsum dolor sit amet, consectetu. adipisicing elit, sed do eiusmod. tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			<p class='lead'>SOMOS UNA MARCA DE ROPA NUEVA QUE TIENE LA ULTIMA MODA DE LOS ULTIMOS AÑOS. Lorem ipsum dolor sit amet, consectetu. adipisicing elit, sed do eiusmod. tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</P> 
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
 		</section>
 			<br>
 			<section class="container">
@@ -83,10 +83,10 @@
 			</div>
 		</section>
 		<br>
-		
+
 	</section>
 		<footer class="cascada-gris"> 
-			<h4><INS><EM>Sobre nosotros:</EM></h4></INS>
+			<h4><ins><em>Sobre nosotros:</em></ins></h4>
 				<div class="name">
 					<h5>Nombre:</h5>
 					<p>Nombre de la marca</p>
