--- a/ubicacion.html
+++ b/ubicacion.html
@@ -16,7 +16,7 @@
 </head>
 <body class="fondos">
 	<section class="partesuperior"> 
-			<HEADER class='ubi'><H1>UBICACIONES</H1></HEADER>
+			<header class='ubi'><H1>UBICACIONES</H1></header>
 			<nav class="enlace navbar navbar-expand-md navbar-dark">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -48,15 +48,15 @@
 			</div>
 				</nav>
 		
-		<UL class='ubicaciones'> 
-			<INS class="lugares">
+		<ul class='ubicaciones'> 
+			<ins class="lugares">
 				<LI class="ubicacionesoho">PALERMO SOHO:</LI> <iframe class='mapa1' src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.6088950388157!2d-58.42736398505291!3d-34.5887614642133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb587a5e98a39%3A0x3bd37412823b64fb!2sPlaza%20Inmigrantes%20de%20Armenia!5e0!3m2!1ses-419!2sar!4v1614131076610!5m2!1ses-419!2sar" width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 				<LI class='ubicacionesolar'>EL SOLAR:</LI><iframe class="mapa2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.4478654317463!2d-58.439069785053654!3d-34.56753256309085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5b8e8b96507%3A0x9da41a3a9ce76b3a!2sEl%20Solar!5e0!3m2!1ses-419!2sar!4v1614130940912!5m2!1ses-419!2sar" width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-		</INS>
-	</UL>
+			</ins>
+		</ul>
 </section>
 <footer class="cascada-gris"> 
-			<h4><INS><EM>Sobre nosotros:</EM></h4></INS>
+			<h4><ins><em>Sobre nosotros:</em></ins></h4>
 			<div class="name">
 					<h5>Nombre:</h5>
 					<p>Nombre de la marca</p>
