--- a/pantalones.html
+++ b/pantalones.html
@@ -44,7 +44,7 @@
 	</nav>
 	
 	<section class="grilla">
-			<span>
+			<span class="nike1">
 				<img class="pantalon1" src="pantalon1.jpg" alt="pantalon cargo negro" width="300" height='350'>
 			<div class="carrito">
 				<button type="button" class="btn btn-success"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
@@ -53,7 +53,7 @@
 				<h5 class="infodelpant">PANTALON NEGRO</h5>
 			</div>
 			</span>
-			<span>
+			<span class="nike2">
 				<img class="pantalon2" src="pantalon2.jpg" alt="pantalon cargo marron" width="300" height='350'>
 				<div class="carrito">
 				<button type="button" class="btn btn-success"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
@@ -62,7 +62,7 @@
 				<h5 class="infodelpant">PANTALON MARRON</h5>			
 				</div>
 			</span>
-			<span>
+			<span class="nike3">
 				<img class='pantalon3' src="pantalon3.jpg" alt="pantalon cargo verde" width="300" height='350'>
 			<div class="carrito">
 				<button type="button" class="btn btn-success"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
@@ -71,7 +71,7 @@
 				<h5 class="infodelpant">PANTALON VERDE</h5>			
 			</div>
 			</span>
-			<span>
+			<span class="nike4">
 				<img class="gorra1" src="gorra1.jpg" alt="gorro adidas" width="300" height='300'>
 				<div class="carrito">
 					<button type="button" class="btn btn-success"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
@@ -80,7 +80,7 @@
 					<h5 class="infodelpant">GORRA ADIDAS</h5>			
 				</div>
 			</span>
-			<span>
+			<span class="nike5">
 				<img class="gorra2" src="gorra2.jpg" alt="gorro pantera" width="300" height='300'>
 				<div class="carrito">
 					<button type="button" class="btn btn-success"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
@@ -89,7 +89,7 @@
 					<h5 class="infodelpant">GORRA PANTERA</h5>			
 				</div>
 			</span>
-			<span>
+			<span class="nike6">
 				<img class="gorra3"  src="gorra3.jpg" alt="gorro caballo" width="300" height='300'>
 				<div class="carrito">
 					<button type="button" class="btn btn-success"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
