--- a/clientes.html
+++ b/clientes.html
@@ -46,34 +46,34 @@
 		<h3 class='dato'>DEJANOS TUS DATOS:</h3>
 		<br></br>
 		
-	<form class='encuesta' ACTION='' METHOD='POST'>
-		<div>
+	<form class='encuesta' id="encuesta" ACTION='' METHOD='POST'>
+		<div class="nombreform">
 			<label FOR='NOMBRE'>NOMBRE:</label>
 			<input ID='NOMBRE' NAME='NOMBRE' TYPE='TEXT'></input>
 		</div>
-		<div>
+		<div class="apellidoform">
 			<label FOR='APELLIDO'>APELLIDO:</label>
 			<input ID='APELLIDO' NAME='APELLIDO' TYPE='TEXT'></input>
 		</div>
-		<div>
+		<div class="mailform">
 			<label FOR='EMAIL'>EMAIL:</label>
 			<input ID='EMAIL' TYPE='EMAIL'NAME='EMAIL'REQUIRED PLACEHOLDER='ejemplo@gmail.com'></input>
 		</div>
-		<div>
+		<div class="encontrarform">
 			<label FOR='ESTADO CIVIL'>COMO NOS ENCONTRASTE:</label>
-			<select NAME='ESTADO CIVIL' ID='ESTADO CIVIL'>
+			<select NAME='ESTADO CIVIL' id='ESTADO CIVIL'>
 				<option VALUE='1'>INSTAGRAM</option>
 				<option VALUE='2'>FACEBOOK</option>
 				<option VALUE='2'>OTRO</option>
 			</select>
 		</div>
 		
-		<div>
+		<div class="infoform">
 			<label FOR='DESEA RECIBIR MAILS CON INFORMACION?'>DESEA RECIBIR INFORMACION DE LA MARCA?</label>
 			<input ID='DESEA RECIBIR MAILS CON INFORMACION?' NAME='DESEA RECIBIR LOS NEWSLETTER?' TYPE='CHECKBOX'></input>
 		</div>
 		
-		<div>
+		<div class="opinionform">
 			<label FOR='OBSERVACIONES'>DEJANOS TU OPINION</label>
 			<textarea NAME='DEJANOS TU OPINION' ID='OBSERVACIONES'COLS='30' ROWS='2' PLACEHOLDER='COMENTARIOS'></textarea>
 		</div>
@@ -96,13 +96,13 @@
 			</div>
 			<div class="gmail">
 				<h5>Mail:</h5>
-				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-open" viewBox="0 0 16 16">
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" id='logomail' class="bi bi-envelope-open" viewBox="0 0 16 16">
 					<path d="M8.47 1.318a1 1 0 0 0-.94 0l-6 3.2A1 1 0 0 0 1 5.4v.818l5.724 3.465L8 8.917l1.276.766L15 6.218V5.4a1 1 0 0 0-.53-.882l-6-3.2zM15 7.388l-4.754 2.877L15 13.117v-5.73zm-.035 6.874L8 10.083l-6.965 4.18A1 1 0 0 0 2 15h12a1 1 0 0 0 .965-.738zM1 13.117l4.754-2.852L1 7.387v5.73zM7.059.435a2 2 0 0 1 1.882 0l6 3.2A2 2 0 0 1 16 5.4V14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V5.4a2 2 0 0 1 1.059-1.765l6-3.2z"/>
 					</svg><a href="mailto:elcorreoquequieras@correo.com"> Marca@gmail.com</a>
 			</div>
 			<div class="telefono">
 				<h5>Teléfono:</h5>
-				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-forward" viewBox="0 0 16 16">
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" id="logocel" class="bi bi-telephone-forward" viewBox="0 0 16 16">
 					<path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511zm10.762.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708z"/>
 				</svg> 1234567890
 			</div>
@@ -114,7 +114,7 @@
 			</div>
 			<section class="face">
 					<h5>Facebook:</h5>
-					<P><a href="https://www.facebook.com/"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+					<P ><a href="https://www.facebook.com/"><svg xmlns="http://www.w3.org/2000/svg"  width="22" height="22" fill="currentColor" id="logoface"class="bi bi-facebook" viewBox="0 0 16 16">
 						<path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
 					</svg></a> Marca.arg</P>
 			</section>
