--- a/pantalones.html
+++ b/pantalones.html
@@ -101,7 +101,7 @@
 	</section>
 </section>
 
-<footer class="cascada-gris"> 
+<footer class="cascada-gris" id="footeresponsive"> 
 	<h4><ins><em>Sobre nosotros:</em></ins></h4>
 	<div class="name">
 			<h5>Nombre:</h5>
