--- a/remeras.html
+++ b/remeras.html
@@ -42,7 +42,7 @@
 		</div>
 			</nav>
 <br></br>
-	<main class='juntos'>
+	<main class='juntos' id="juntos">
 		<section>
 			<table BORDER class='tabla'>
 			<thead>
@@ -91,7 +91,7 @@
 		</table>
 		</section>
 	
-	<main class="imagen">
+	<main class="imagen" >
 		<div class='mover'>
 			<span>
 				<img class="remerazul" src="remeraazul.jpg" alt="remera azul" width="300" height='300'>
