--- a/ubicacion.html
+++ b/ubicacion.html
@@ -49,9 +49,9 @@
 				</nav>
 		
 		<ul class='ubicaciones'> 
-			<span class="lugares">
+			<span class="lugares" id="lugares">
 				<LI class="ubicacionesoho">PALERMO SOHO:</LI> <iframe class='mapa1' src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.6088950388157!2d-58.42736398505291!3d-34.5887614642133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb587a5e98a39%3A0x3bd37412823b64fb!2sPlaza%20Inmigrantes%20de%20Armenia!5e0!3m2!1ses-419!2sar!4v1614131076610!5m2!1ses-419!2sar" width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-				<LI class='ubicacionesolar'>EL SOLAR:</LI><iframe class="mapa2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.4478654317463!2d-58.439069785053654!3d-34.56753256309085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5b8e8b96507%3A0x9da41a3a9ce76b3a!2sEl%20Solar!5e0!3m2!1ses-419!2sar!4v1614130940912!5m2!1ses-419!2sar" width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+				<LI class='ubicacionesolar' id="ubicacionesolar">EL SOLAR:</LI><iframe class="mapa2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.4478654317463!2d-58.439069785053654!3d-34.56753256309085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5b8e8b96507%3A0x9da41a3a9ce76b3a!2sEl%20Solar!5e0!3m2!1ses-419!2sar!4v1614130940912!5m2!1ses-419!2sar" width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 			</span>
 		</ul>
 </section>
