--- a/clientes.html
+++ b/clientes.html
@@ -79,9 +79,9 @@
 		</div>
 		<br>
 		<div>
-			<button TYPE='RESET' VALUE='LIMPIAR FORMULARIO'>LIMPIAR FORMULARIO</button>
+			<button id="boton" class="btn btn-primary btn-lg active"  TYPE='RESET' VALUE='LIMPIAR FORMULARIO'>LIMPIAR FORMULARIO</button>
 
-			<button TYPE='SUBMIT' VALUE='ENVIAR FORMULARIO'>ENVIAR!</button>
+			<button id="boton" class="btn btn-primary btn-lg active"  TYPE='SUBMIT' VALUE='ENVIAR FORMULARIO'>ENVIAR!</button>
 		</div>
 		<div>
 		
