--- a/remeras.html
+++ b/remeras.html
@@ -101,7 +101,8 @@
 				</span>	
 			<span>
 				<img class="remeraroja" src="remeraroja.jpg" alt="remera roja" height='300' width="300" >
-			</span> </div>
+			</span>
+		</div>
 				<h6 class="color1">Remera azul, cuello redondo<span class="badge badge-secondary" id='badge' >New</span></h6>
 				<h6 class="color2">Remera naranja, cuello redondo<span class="badge badge-secondary" id='badge'>New</span></h6>
 				<h6 class="color3">Remera roja, cuello redondo<span class="badge badge-secondary" id="badge">New</span></h6>
